--- a/restaurant/src/main/resources/templates/sold/transactionRecordsList.html
+++ b/restaurant/src/main/resources/templates/sold/transactionRecordsList.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>交易记录</title>
+    <title>Transaction Record</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}"
           href="../../static/layuiadmin/layui/css/layui.css"
           media="all"/>
@@ -20,39 +20,39 @@
     <div class="layui-form layui-card-header layuiadmin-card-header-auto">
         <div class="layui-form-item">
             <div class="layui-inline">
-                <label class="layui-form-label">查询条件</label>
+                <label class="layui-form-label">Query conditions</label>
                 <div class="layui-input-inline" style="width:100px;">
-                    <input type="text" name="deskCode" id="deskCode" placeholder="桌号" autocomplete="off"
+                    <input type="text" name="deskCode" id="deskCode" placeholder="Table number" autocomplete="off"
                            class="layui-input">
                 </div>
             </div>
             <div class="layui-inline">
                 <div class="layui-input-inline" style="width:100px;">
-                    <input type="text" name="orderCode" id="orderCode" placeholder="订单号" autocomplete="off"
+                    <input type="text" name="orderCode" id="orderCode" placeholder="Order number" autocomplete="off"
                            class="layui-input">
                 </div>
             </div>
             <div class="layui-inline">
                 <div class="layui-input-inline" style="width:100px;">
-                    <input type="text" name="memberCode" id="memberCode" placeholder="会员号" autocomplete="off"
+                    <input type="text" name="memberCode" id="memberCode" placeholder="Order number" autocomplete="off"
                            class="layui-input">
                 </div>
             </div>
             <div class="layui-inline">
                 <div class="layui-input-inline" style="width:100px;">
-                    <input type="text" name="name" id="name" placeholder="会员名" autocomplete="off"
+                    <input type="text" name="name" id="name" placeholder="Member name" autocomplete="off"
                            class="layui-input">
                 </div>
             </div>
             <div class="layui-inline">
                 <div class="layui-input-inline">
-                    <input type="text" id="startTime" name="startTime" placeholder="开始日期时间" autocomplete="off" class="layui-input">
+                    <input type="text" id="startTime" name="startTime" placeholder="Start date time" autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-mid">
                     -
                 </div>
                 <div class="layui-input-inline">
-                    <input type="text" id="endTime" name="endTime" placeholder="结束日期时间" autocomplete="off" class="layui-input">
+                    <input type="text" id="endTime" name="endTime" placeholder="End date time" autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-inline">
@@ -84,14 +84,14 @@
         <table id="tableList" lay-filter="tableList"></table>
         <!--右边工具栏-->
         <script th:inline="javascript" type="text/html" id="barDemo">
-            <a class="layui-btn layui-btn-xs" lay-event="viewDetail">详细记录</a>
+            <a class="layui-btn layui-btn-xs" lay-event="viewDetail">Record details</a>
             <!--在该语法中通过模板Thymeleaf模板引擎获取中文会被转换成编码-->
             {{#
             if( [[${session.user.role.roleId}]]==1)
             { }}
-            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete"></i>删除</a>
+            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete"></i>Delete</a>
             {{#  } else { }}
-            <a class="layui-btn layui-btn-disabled layui-btn-xs"><i class="layui-icon layui-icon-delete"></i>删除</a>
+            <a class="layui-btn layui-btn-disabled layui-btn-xs"><i class="layui-icon layui-icon-delete"></i>Delete</a>
             {{#  } }}
         </script>
         <script type="text/html" id="memberCode_templet">
@@ -102,7 +102,7 @@
             {{#
             }else{
             }}
-            <div style="color: #FF1744;">无</div>
+            <div style="color: #FF1744;">None</div>
             {{#
             }
             }}
@@ -115,7 +115,7 @@
             {{#
             }else{
             }}
-            <div style="color: #FF1744;">非会员</div>
+            <div style="color: #FF1744;">None member</div>
             {{#
             }
             }}
@@ -124,11 +124,11 @@
             {{#
             if(d.actualPay!=null){
             }}
-            <div>{{d.actualPay}}元</div>
+            <div>{{d.actualPay}}None</div>
             {{#
             }else{
             }}
-            <div style="color: #FF1744;">未付款</div>
+            <div style="color: #FF1744;">Unpaid</div>
             {{#
             }
             }}
@@ -137,11 +137,11 @@
             {{#
             if(d.payStatus==0){
             }}
-            <div style="color: #FF1744;">未付款</div>
+            <div style="color: #FF1744;">Unpaid</div>
             {{#
             }else{
             }}
-            <div style="color:#5FB878;">已付款</div>
+            <div style="color:#5FB878;">Paid</div>
             {{#
             }
             }}
@@ -150,11 +150,11 @@
             {{#
             if(d.finishStatus==0){
             }}
-            <div style="color: #FF1744;">未完成</div>
+            <div style="color: #FF1744;">Undone</div>
             {{#
             }else{
             }}
-            <div style="color:#5FB878;">已完成</div>
+            <div style="color:#5FB878;">Done</div>
             {{#
             }
             }}
@@ -208,23 +208,23 @@
             , cols: [[ //表头
                  {type: 'checkbox', fixed: 'left'}
                 , {field: 'orderId', title: 'ID', align: 'center', width: 70, sort: true, fixed: 'left', sort: true, hide: true}
-                , {field: 'orderCode', title: '订单号', align: 'center', width: 230, sort: true}
-                , {field: 'deskCode', title: '桌号', align: 'center', width: 120}
-                , {field: 'member', title: '会员号', align: 'center', width: 140, templet: '#memberCode_templet'}
-                , {field: 'member', title: '会员名', align: 'center', width: 120, templet: '#member_templet'}
-                , {field: 'totalPrice', title: '菜品总价', align: 'center', width: 140, sort: true,templet:'<div>{{d.totalPrice}}元</div>'}
-                , {field: 'mustPay', title: '应付金额', align: 'center', width: 140, templet: "<div>{{d.mustPay}}元</div>"}
-                , {field: 'actualPay', title: '实付金额', align: 'center', width: 140, templet: "#actualPay_templet"}
-                , {field: 'discountMoney', title: '折扣金额', align: 'center', width: 140, templet: "<div>{{d.discountMoney}}元</div>"}
-                , {field: 'changeMoney', title: '找零', align: 'center', width: 140, templet: "<div>{{d.changeMoney}}元</div>"}
-                , {field: 'totalCost', title: '总成本', align: 'center', width: 140, templet: "<div>{{d.totalCost}}元</div>"}
-                , {field: 'totalProfit', title: '总利润', align: 'center', width: 140, templet: "<div>{{d.totalProfit}}元</div>"}
-                , {field: 'peopleNum', title: '人数', align: 'center', width: 120}
-                , {field: 'payStatus', title: '付款状态', align: 'center', width:120, templet: "#payStatus_templet"}
-                , {field: 'name', title: '收银员', align: 'center', width:120, templet: "<div>{{d.cashier.name}}</div>"}
-                , {field: 'createTime', title: '下单时间',align: 'center', width: 170,sort: true,templet:'<div>{{d.createTime}}</div>'}
-                , {field: 'modifyTime', title: '修改时间',align: 'center', width: 170,sort: true,templet:'#modifyTime_templet'}
-                , {fixed: 'right', title: "工具栏",align:'center', width: 220, toolbar: '#barDemo'}
+                , {field: 'orderCode', title: 'Order number', align: 'center', width: 230, sort: true}
+                , {field: 'deskCode', title: 'Table number', align: 'center', width: 120}
+                , {field: 'member', title: 'Member number', align: 'center', width: 140, templet: '#memberCode_templet'}
+                , {field: 'member', title: 'Member name', align: 'center', width: 120, templet: '#member_templet'}
+                , {field: 'totalPrice', title: 'Food total amount', align: 'center', width: 140, sort: true,templet:'<div>{{d.totalPrice}}元</div>'}
+                , {field: 'mustPay', title: 'Amounts payable', align: 'center', width: 140, templet: "<div>{{d.mustPay}}元</div>"}
+                , {field: 'actualPay', title: 'Amount paid', align: 'center', width: 140, templet: "#actualPay_templet"}
+                , {field: 'discountMoney', title: 'Discount amount', align: 'center', width: 140, templet: "<div>{{d.discountMoney}}元</div>"}
+                , {field: 'changeMoney', title: 'change', align: 'center', width: 140, templet: "<div>{{d.changeMoney}}元</div>"}
+                , {field: 'totalCost', title: 'Total cost', align: 'center', width: 140, templet: "<div>{{d.totalCost}}元</div>"}
+                , {field: 'totalProfit', title: 'Total profit', align: 'center', width: 140, templet: "<div>{{d.totalProfit}}元</div>"}
+                , {field: 'peopleNum', title: 'Number of people', align: 'center', width: 120}
+                , {field: 'payStatus', title: 'Payment status', align: 'center', width:120, templet: "#payStatus_templet"}
+                , {field: 'name', title: 'cashier', align: 'center', width:120, templet: "<div>{{d.cashier.name}}</div>"}
+                , {field: 'createTime', title: 'Order time',align: 'center', width: 170,sort: true,templet:'<div>{{d.createTime}}</div>'}
+                , {field: 'modifyTime', title: 'Edit time',align: 'center', width: 170,sort: true,templet:'#modifyTime_templet'}
+                , {fixed: 'right', title: "Toolbar",align:'center', width: 220, toolbar: '#barDemo'}
             ]]
         });
         //监听头工具栏事件
@@ -234,9 +234,9 @@
             switch (obj.event) {
                 case 'delete':
                     if (data.length === 0) {
-                        layer.msg('请选择一行');
+                        layer.msg('Please select a row');
                     } else {
-                        layer.confirm('确定删除?', function () {
+                        layer.confirm('Confirm delete?', function () {
                             var ids = '';
                             for (var i = 0; i < data.length; i++) {
                                 ids += data[i].orderId + ",";
@@ -249,10 +249,10 @@
                                 success: function (result) {
                                     if (result.code == 200) {
                                         table.reload('tableList'); //数据刷新
-                                        layer.msg('删除成功!', {icon: 1});
+                                        layer.msg('Sucessfully deleted!', {icon: 1});
                                     } else {
                                         layer.alert(result.msg, {
-                                            title: '提交结果'
+                                            title: 'Submit result'
                                             , anim: 6
                                         });
                                     }
@@ -273,19 +273,19 @@
                 var url = "/restaurant/order/viewdetail.html/" + data.orderId;
                 layer.open({
                     type: 2
-                    , title: '订单明细'
+                    , title: 'Order details'
                     , content: url
                     , maxmin: true
                     , anim: 1
                     , area: ['900px', '540px']
-                    ,btn: ['确定', '取消']
+                    ,btn: ['Confirm', 'Cancel']
                     ,yes: function(index, layero){
                         table.reload('tableList'); //数据刷新
                         layer.close(index);
                     }
                 });
             }else if(layEvent=='del'){
-                layer.confirm('确定删除该交易记录?', function (index) {
+                layer.confirm('Confirm to delete this transaction?', function (index) {
                     $.ajax({
                         url: "/restaurant/order/del.do",
                         type: "post",
@@ -294,10 +294,10 @@
                         success: function (result) {
                             if (result.code == 200) {
                                 obj.del(); //删除对应行（tr）的DOM结构
-                                layer.msg('删除成功!', {icon: 1});
+                                layer.msg('Sucessfully deleted!', {icon: 1});
                             } else {
                                 layer.alert(result.msg, {
-                                    title: '提交结果'
+                                    title: 'Submit result'
                                     , anim: 6
                                 });
                             }
