--- a/restaurant/src/main/resources/templates/goodscategory/add.html
+++ b/restaurant/src/main/resources/templates/goodscategory/add.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>添加菜品类型</title>
+    <title>Add food catagory</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -18,7 +18,7 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs12 layui-col-sm12 layui-col-md4">
-                        <label class="layui-form-label">类型名称</label>
+                        <label class="layui-form-label">Catagory name</label>
                         <div class="layui-input-block">
                             <input type="text" name="categoryName" lay-verify="required" placeholder=""
                                    autocomplete="off" class="layui-input">
