--- a/restaurant/src/main/resources/templates/goodscategory/edit.html
+++ b/restaurant/src/main/resources/templates/goodscategory/edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>修改菜品类型</title>
+    <title>Edit food catagory</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -22,7 +22,7 @@
                                class="layui-input">
                     </div>
                     <div class="layui-col-xs12 layui-col-sm12 layui-col-md4">
-                        <label class="layui-form-label">类型名称</label>
+                        <label class="layui-form-label">catagory name</label>
                         <div class="layui-input-block">
                             <input type="text" th:value="${goodsCategory.categoryName}" name="categoryName"
                                    lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
