--- a/restaurant/src/main/resources/templates/goodscategory/list.html
+++ b/restaurant/src/main/resources/templates/goodscategory/list.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>菜品类型表</title>
+    <title>Food catagory chart</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../static/layuiadmin/layui/css/layui.css"
           media="all"/>
     <link rel="stylesheet" th:href="@{/layuiadmin/style/admin.css}" href="../static/layuiadmin/layui/css/layui.css"
@@ -31,8 +31,8 @@
             <table id="tableList" lay-filter="tableList"></table>
             <!--右边工具栏-->
             <script type="text/html" id="barDemo">
-                <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+                <a class="layui-btn layui-btn-xs" lay-event="edit">Edit</a>
+                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">Delete</a>
             </script>
         </div>
     </div>
@@ -50,7 +50,7 @@
                 , height: 620
                 , url: "/restaurant/goodscategory/list.do" //数据接口
                 , method: 'post'
-                , title: '菜品类型表'
+                , title: 'Food catagory chart'
                 , response: {
                     statusCode: 200
                 }
@@ -72,11 +72,11 @@
                     case 'add':
                         layer.open({
                             type: 2
-                            ,title: '添加菜品类型'
+                            ,title: 'Add food catagory'
                             ,content: '/restaurant/goodscategory/add.html'
                             ,maxmin: true
                             ,area: ['350px', '200px']
-                            ,btn: ['确定', '取消']
+                            ,btn: ['confirm', 'cancel']
                             ,yes: function(index, layero){
                                 var iframeWindow = window['layui-layer-iframe'+ index]
                                     //该id是窗口打开html页面中表单提交按钮的id
@@ -98,7 +98,7 @@
                                                 layer.close(index); //关闭弹层
                                             }else {
                                                 layer.alert(result.msg, {
-                                                    title: '提交结果'
+                                                    title: 'submit result'
                                                     ,anim: 6
                                                 });
                                             }
@@ -111,19 +111,19 @@
                         break;
                     case 'update':
                         if (data.length === 0) {
-                            layer.msg('请选择一行');
+                            layer.msg('Please select a row');
                         } else if (data.length > 1) {
-                            layer.msg('只能同时编辑一个');
+                            layer.msg('only can edit one');
                         } else {
                             var categoryId = checkStatus.data[0].categoryId;
                             var url = '/restaurant/goodscategory/edit.html/'+categoryId;
                             layer.open({
                                 type: 2
-                                ,title: '编辑菜品类型'
+                                ,title: 'Edit food catagory'
                                 ,content:url
                                 ,maxmin: true
                                 ,area: ['350px', '200px']
-                                ,btn: ['确定', '取消']
+                                ,btn: ['confirm', 'cancel']
                                 ,yes: function(index, layero){
                                     var iframeWindow = window['layui-layer-iframe'+ index]
                                         ,submitID = 'LAY-user-front-submit'
@@ -144,7 +144,7 @@
                                                     layer.close(index); //关闭弹层
                                                 }else {
                                                     layer.alert(result.msg, {
-                                                        title: '提交结果'
+                                                        title: 'submit result'
                                                         ,anim: 6
                                                     });
                                                 }
@@ -158,9 +158,9 @@
                         break;
                     case 'delete':
                         if (data.length === 0) {
-                            layer.msg('请选择一行');
+                            layer.msg('please select a row');
                         } else {
-                            layer.confirm('确定删除?', function (){
+                            layer.confirm('Confirm delete?', function (){
                                 var ids = '';
                                 for (var i = 0; i < data.length; i++) {
                                     ids += data[i].categoryId + ",";
@@ -173,10 +173,10 @@
                                     success: function(result) {
                                         if(result.code == 200) {
                                             table.reload('tableList'); //数据刷新
-                                            layer.msg('删除成功!', {icon: 6});
+                                            layer.msg('successfully deleted!', {icon: 6});
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: '提交结果'
+                                                title: 'Submit result'
                                                 ,anim: 6
                                             });
                                         }
@@ -194,7 +194,7 @@
                 var data = obj.data //获得当前行数据
                     , layEvent = obj.event; //获得 lay-event 对应的值
                 if (layEvent === 'del') {
-                    layer.confirm('确定删除?'+data.categoryName, function (index) {
+                    layer.confirm('Confirm delete?'+data.categoryName, function (index) {
                         $.ajax({
                             url: "/restaurant/goodscategory/del.do",
                             type: "post",
@@ -203,10 +203,10 @@
                             success: function(result) {
                                 if(result.code == 200) {
                                     obj.del(); //删除对应行（tr）的DOM结构
-                                    layer.msg('删除成功!', {icon: 6});
+                                    layer.msg('successfully deleted!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: '提交结果'
+                                        title: 'Submit result'
                                         ,anim: 6
                                     });
                                 }
@@ -218,11 +218,11 @@
                     var url = '/restaurant/goodscategory/edit.html/'+data.categoryId;
                     layer.open({
                         type: 2
-                        ,title: '编辑会员类型'
+                        ,title: 'Edit member catagory'
                         ,content:url
                         ,maxmin: true
                         ,area: ['350px', '200px']
-                        ,btn: ['确定', '取消']
+                        ,btn: ['Confirm', 'Cancel']
                         ,yes: function(index, layero){
                             var iframeWindow = window['layui-layer-iframe'+ index]
                                 ,submitID = 'LAY-user-front-submit'
@@ -243,7 +243,7 @@
                                             layer.close(index); //关闭弹层
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: '提交结果'
+                                                title: 'Submit result'
                                                 ,anim: 6
                                             });
                                         }
