--- a/restaurant/src/main/resources/templates/member/add.html
+++ b/restaurant/src/main/resources/templates/member/add.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>添加用户</title>
+    <title>Add member</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -18,14 +18,14 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">会员号</label>
+                        <label class="layui-form-label">Member number</label>
                         <div class="layui-input-block">
                             <input type="text" name="memberCode" lay-verify="required|phone" placeholder="电话号作会员号"
                                    autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">角色</label>
+                        <label class="layui-form-label">Role</label>
                         <div class="layui-input-block">
                             <select name="mcId">
                                 <th:block th:each="memberCategory:${memberCategoryList}">
@@ -39,17 +39,17 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">姓名</label>
+                        <label class="layui-form-label">Name</label>
                         <div class="layui-input-block">
                             <input type="text" name="name" lay-verify="required" placeholder="" autocomplete="off"
                                    class="layui-input">
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">性别</label>
+                        <label class="layui-form-label">Sex</label>
                         <div class="layui-input-block">
-                            <input type="radio" name="gender" value="男" title="男">
-                            <input type="radio" name="gender" value="女" title="女" checked>
+                            <input type="radio" name="gender" value="male" title="male">
+                            <input type="radio" name="gender" value="female" title="female" checked>
                         </div>
                     </div>
                 </div>
@@ -57,14 +57,14 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">电话</label>
+                        <label class="layui-form-label">Phone</label>
                         <div class="layui-input-block">
                             <input type="text" name="phone" lay-verify="required|phone" placeholder="" autocomplete="off"
                                    class="layui-input">
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">生日</label>
+                        <label class="layui-form-label">Birth</label>
                         <div class="layui-input-block">
                             <input type="text" id="birthday" name="birthday" lay-verify="required" placeholder=""
                                    autocomplete="off" class="layui-input">
@@ -74,7 +74,7 @@
             </div>
             <div class="layui-form-item layui-hide">
                 <input type="button" lay-submit lay-filter="LAY-user-front-submit" id="LAY-user-front-submit"
-                       value="确认">
+                       value="confirm">
             </div>
         </form>
     </div>
