--- a/restaurant/src/main/resources/templates/member/list.html
+++ b/restaurant/src/main/resources/templates/member/list.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>会员表</title>
+    <title>Member List</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layuiadmin/layui/css/layui.css"
           media="all"/>
     <link rel="stylesheet" th:href="@{/layuiadmin/style/admin.css}" href="../../static/layuiadmin/layui/css/layui.css"
@@ -19,39 +19,39 @@
         <div class="layui-form layui-card-header layuiadmin-card-header-auto">
             <div class="layui-form-item">
                 <div class="layui-inline">
-                    <label class="layui-form-label">查询条件</label>
+                    <label class="layui-form-label">Query conditions</label>
                     <div class="layui-input-inline" style="width:100px;">
-                        <input type="text" name="memberCode" id="memberCode" placeholder="会员号" autocomplete="off" class="layui-input">
+                        <input type="text" name="memberCode" id="memberCode" placeholder="member number" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-inline">
                     <div class="layui-input-inline" style="width:100px;">
-                        <input type="text" name="name" id="name" placeholder="姓名"  autocomplete="off" class="layui-input">
+                        <input type="text" name="name" id="name" placeholder="name"  autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-inline">
                     <div class="layui-input-inline" style="width:100px;">
-                        <input type="text" id="test1" lay-key="1" name="birthday" placeholder="生日" autocomplete="off" class="layui-input">
+                        <input type="text" id="test1" lay-key="1" name="birthday" placeholder="birth" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-inline">
                     <div class="layui-input-inline" style="width: 150px">
-                        <label class="layui-form-label" style="width:40px;;padding: 9px 0px">性别</label>
+                        <label class="layui-form-label" style="width:40px;;padding: 9px 0px">Sex</label>
                         <div class="layui-input-block" style="margin-left:50px;">
                             <select name="gender">
-                                <option value="">不限</option>
-                                <option value="男">男</option>
-                                <option value="女">女</option>
+                                <option value="">No limit</option>
+                                <option value="男">Male</option>
+                                <option value="女">Female</option>
                             </select>
                         </div>
                     </div>
                 </div>
                 <div class="layui-inline">
                     <div class="layui-input-inline" style="width: 180px">
-                        <label class="layui-form-label" style="width:60px;;padding: 9px 0px">会员类型</label>
+                        <label class="layui-form-label" style="width:60px;;padding: 9px 0px">Member type</label>
                         <div class="layui-input-block" style="margin-left:70px;">
                             <select name="mcId">
-                                <option value="">不限</option>
+                                <option value="">No limit</option>
                                 <th:block th:each="memberCategory:${memberCategoryList}">
                                     <option th:value="${memberCategory.mcId}" th:text="${memberCategory.mcName}"></option>
                                 </th:block>
@@ -91,14 +91,14 @@
             <table id="tableList" lay-filter="tableList"></table>
             <!--右边工具栏-->
             <script th:inline="javascript" type="text/html" id="barDemo">
-                <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+                <a class="layui-btn layui-btn-xs" lay-event="edit">Edit</a>
                 <!--在该语法中通过模板Thymeleaf模板引擎获取中文会被转换成编码-->
                 {{#
                 if( [[${role.roleId}]]==1)
                 { }}
-                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">Delete</a>
                 {{#  } else { }}
-                <a class="layui-btn layui-btn-disabled layui-btn-xs">删除</a>
+                <a class="layui-btn layui-btn-disabled layui-btn-xs">Delete</a>
                 {{#  } }}
             </script>
             <!--下边分页条-->
@@ -129,7 +129,7 @@
                     statusCode: 200
                 }
                 , limits: [10, 20, 30,40,50,60]
-                , title: '会员表'
+                , title: 'Member chart'
                 , page: true //开启分页
                 , even: true//开启背景隔行
                 ,height:540
@@ -138,17 +138,17 @@
                 , cols: [[ //表头
                     {type: 'checkbox', fixed: 'left'}
                     , {field: 'memberId', title: 'ID',align:'center', width: 80, sort: true, fixed: 'left',hide:true}
-                    , {field: 'memberCode', title: '账号',align:'center', width: 140}
-                    , {field: 'name', title: '姓名', align:'center',width: 80, sort: true, totalRow: true}
-                    , {field: 'gender', title: '性别',align:'center', width: 80, sort: true}
-                    , {field: 'phone', title: '电话',align:'center', width: 140, sort: true, totalRow: true}
-                    , {field: 'birthday', title: '生日',align:'center', width: 150}
-                    , {field: 'totalMoney', title: '总消费金额',align:'center', width: 180,sort: true}
+                    , {field: 'memberCode', title: 'Account',align:'center', width: 140}
+                    , {field: 'name', title: 'Name', align:'center',width: 80, sort: true, totalRow: true}
+                    , {field: 'gender', title: 'Sex',align:'center', width: 80, sort: true}
+                    , {field: 'phone', title: 'Phone',align:'center', width: 140, sort: true, totalRow: true}
+                    , {field: 'birthday', title: 'Birth',align:'center', width: 150}
+                    , {field: 'totalMoney', title: 'Total consumption',align:'center', width: 180,sort: true}
                     /*取嵌套json数据用模板 templet: '<div>{{d.role.roleName}}</div>'*/
-                    , {field: 'role', title: '会员类型',align:'center', width: 100, templet: '<div>{{d.memberCategory.mcName}}</div>'}
-                    , {field: 'createTime', align:'center',title: '创建时间', width: 180,sort: true}
-                    , {field: 'modifyTime',align:'center', title: '修改时间', width: 180,sort: true}
-                    , {fixed: 'right', title: "工具栏",align:'center', width: 180, toolbar: '#barDemo'}
+                    , {field: 'role', title: 'Member type',align:'center', width: 100, templet: '<div>{{d.memberCategory.mcName}}</div>'}
+                    , {field: 'createTime', align:'center',title: 'Create time', width: 180,sort: true}
+                    , {field: 'modifyTime',align:'center', title: 'Edit time', width: 180,sort: true}
+                    , {fixed: 'right', title: "Toolbar",align:'center', width: 180, toolbar: '#barDemo'}
                 ]]
             });
 
@@ -160,11 +160,11 @@
                     case 'add':
                         layer.open({
                             type: 2
-                            ,title: '添加会员'
+                            ,title: 'Add member'
                             ,content: '/restaurant/member/add.html'
                             ,maxmin: true
                             ,area: ['650px', '450px']
-                            ,btn: ['确定', '取消']
+                            ,btn: ['COnfirm', 'Cancel']
                             ,yes: function(index, layero){
                                 var iframeWindow = window['layui-layer-iframe'+ index]
                                     //该id是窗口打开html页面中表单提交按钮的id
@@ -185,7 +185,7 @@
                                                 layer.close(index); //关闭弹层
                                             }else {
                                                 layer.alert(result.msg, {
-                                                    title: '提交结果'
+                                                    title: 'Submit result'
                                                     ,anim: 6
                                                 });
                                             }
@@ -198,19 +198,19 @@
                         break;
                     case 'update':
                         if (data.length === 0) {
-                            layer.msg('请选择一行');
+                            layer.msg('Please selete a row');
                         } else if (data.length > 1) {
-                            layer.msg('只能同时编辑一个');
+                            layer.msg('only can edit once');
                         } else {
                             var memberId = checkStatus.data[0].memberId;
                             var url = '/restaurant/member/edit.html/'+memberId;
                             layer.open({
                                 type: 2
-                                ,title: '编辑会员'
+                                ,title: 'Edit member'
                                 ,content:url
                                 ,maxmin: true
                                 ,area: ['650px', '450px']
-                                ,btn: ['确定', '取消']
+                                ,btn: ['Confirm', 'Cancel']
                                 ,yes: function(index, layero){
                                     var iframeWindow = window['layui-layer-iframe'+ index]
                                         ,submitID = 'LAY-user-front-submit'
@@ -231,7 +231,7 @@
                                                     layer.close(index); //关闭弹层
                                                 }else {
                                                     layer.alert(result.msg, {
-                                                        title: '提交结果'
+                                                        title: 'Submit result'
                                                         ,anim: 6
                                                     });
                                                 }
@@ -245,9 +245,9 @@
                         break;
                     case 'delete':
                         if (data.length === 0) {
-                            layer.msg('请选择一行');
+                            layer.msg('Please select a row');
                         } else {
-                            layer.confirm('确定删除?', function (){
+                            layer.confirm('Confirm delete?', function (){
                                 var ids = '';
                                 for (var i = 0; i < data.length; i++) {
                                     ids += data[i].memberId + ",";
@@ -260,10 +260,10 @@
                                     success: function(result) {
                                         if(result.code == 200) {
                                             table.reload('tableList'); //数据刷新
-                                            layer.msg('删除成功!', {icon: 6});
+                                            layer.msg('Successfully deleted!', {icon: 6});
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: '提交结果'
+                                                title: 'Submit result'
                                                 ,anim: 6
                                             });
                                         }
@@ -281,7 +281,7 @@
                 var data = obj.data //获得当前行数据
                     , layEvent = obj.event; //获得 lay-event 对应的值
                 if (layEvent === 'del') {
-                    layer.confirm('确定删除?'+data.name, function (index) {
+                    layer.confirm('Confirm delete?'+data.name, function (index) {
                         $.ajax({
                             url: "/restaurant/member/del.do",
                             type: "post",
@@ -290,10 +290,10 @@
                             success: function(result) {
                                 if(result.code == 200) {
                                     obj.del(); //删除对应行（tr）的DOM结构
-                                    layer.msg('删除成功!', {icon: 6});
+                                    layer.msg('Suceessfully deleted!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: '提交结果'
+                                        title: 'Submit result'
                                         ,anim: 6
                                     });
                                 }
@@ -306,11 +306,11 @@
                     var url = '/restaurant/member/edit.html/'+data.memberId;
                     layer.open({
                         type: 2
-                        ,title: '编辑会员'
+                        ,title: 'Edit member'
                         ,content:url
                         ,maxmin: true
                         ,area: ['650px', '450px']
-                        ,btn: ['确定', '取消']
+                        ,btn: ['Confirm', 'Cancel']
                         ,yes: function(index, layero){
                             var iframeWindow = window['layui-layer-iframe'+ index]
                                 ,submitID = 'LAY-user-front-submit'
@@ -331,7 +331,7 @@
                                             layer.close(index); //关闭弹层
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: '提交结果'
+                                                title: 'Submit result'
                                                 ,anim: 6
                                             });
                                         }
