--- a/restaurant/src/main/resources/templates/order/list.html
+++ b/restaurant/src/main/resources/templates/order/list.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>订单列表</title>
+    <title>Order list</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}"
           href="../../static/layuiadmin/layui/css/layui.css"
           media="all"/>
@@ -20,7 +20,7 @@
     <div class="layui-form layui-card-header layuiadmin-card-header-auto">
         <div class="layui-form-item">
             <div class="layui-inline">
-                <label class="layui-form-label">查询条件</label>
+                <label class="layui-form-label">Query conditions</label>
                 <div class="layui-input-inline" style="width:100px;">
                     <input type="text" name="deskCode" id="deskCode" placeholder="桌号" autocomplete="off"
                            class="layui-input">
@@ -34,24 +34,24 @@
             </div>
             <div class="layui-inline">
                 <div class="layui-input-inline" style="width: 170px">
-                    <label class="layui-form-label" style="width:60px;padding: 9px 0px">付款状态</label>
+                    <label class="layui-form-label" style="width:60px;padding: 9px 0px">Payment status</label>
                     <div class="layui-input-block" style="margin-left:70px;">
                         <select name="payStatus">
-                            <option value="">不限</option>
-                            <option value="0">未付款</option>
-                            <option value="1">已付款</option>
+                            <option value="">No limit</option>
+                            <option value="0">Unpaid</option>
+                            <option value="1">Paid</option>
                         </select>
                     </div>
                 </div>
             </div>
             <div class="layui-inline">
                 <div class="layui-input-inline" style="width: 170px">
-                    <label class="layui-form-label" style="width:60px;padding: 9px 0px">完成状态</label>
+                    <label class="layui-form-label" style="width:60px;padding: 9px 0px">Completed status</label>
                     <div class="layui-input-block" style="margin-left:70px;">
                         <select name="finishStatus">
-                            <option value="">不限</option>
-                            <option value="0">未完成</option>
-                            <option value="1">已完成</option>
+                            <option value="">No limit</option>
+                            <option value="0">Undone</option>
+                            <option value="1">Done</option>
                         </select>
                     </div>
                 </div>
@@ -85,14 +85,14 @@
         <table id="tableList" lay-filter="tableList"></table>
         <!--右边工具栏-->
         <script th:inline="javascript" type="text/html" id="barDemo">
-            <a class="layui-btn layui-btn-xs" lay-event="viewDetail">查看明细</a>
+            <a class="layui-btn layui-btn-xs" lay-event="viewDetail">View details</a>
             <!--在该语法中通过模板Thymeleaf模板引擎获取中文会被转换成编码-->
             {{#
             if( [[${session.user.role.roleId}]]==1)
             { }}
-            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete"></i>删除</a>
+            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete"></i>Delete</a>
             {{#  } else { }}
-            <a class="layui-btn layui-btn-disabled layui-btn-xs"><i class="layui-icon layui-icon-delete"></i>删除</a>
+            <a class="layui-btn layui-btn-disabled layui-btn-xs"><i class="layui-icon layui-icon-delete"></i>Delete</a>
             {{#  } }}
         </script>
         <script type="text/html" id="member_templet">
@@ -103,7 +103,7 @@
             {{#
             }else{
             }}
-            <div style="color: #FF1744;">无</div>
+            <div style="color: #FF1744;">None</div>
             {{#
             }
             }}
@@ -116,7 +116,7 @@
             {{#
             }else{
             }}
-            <div style="color: #FF1744;">未付款</div>
+            <div style="color: #FF1744;">Unpaid</div>
             {{#
             }
             }}
@@ -125,11 +125,11 @@
             {{#
             if(d.payStatus==0){
             }}
-            <div style="color: #FF1744;">未付款</div>
+            <div style="color: #FF1744;">Unpaid</div>
             {{#
             }else{
             }}
-            <div style="color:#5FB878;">已付款</div>
+            <div style="color:#5FB878;">Paid/div>
             {{#
             }
             }}
@@ -138,11 +138,11 @@
             {{#
             if(d.finishStatus==0){
             }}
-            <div style="color: #FF1744;">未完成</div>
+            <div style="color: #FF1744;">Undone</div>
             {{#
             }else{
             }}
-            <div style="color:#5FB878;">已完成</div>
+            <div style="color:#5FB878;">Done</div>
             {{#
             }
             }}
@@ -188,7 +188,7 @@
                 statusCode: 200
             }
             , limits: [10, 20, 30,40]
-            , title: '订单表'
+            , title: 'Order list'
             , page: true //开启分页
             , even: true//开启背景隔行
             , height: 535
@@ -197,17 +197,17 @@
             , cols: [[ //表头
                  {type: 'checkbox', fixed: 'left'}
                 , {field: 'orderId', title: 'ID', align: 'center', width: 70, sort: true, fixed: 'left', sort: true, hide: true}
-                , {field: 'orderCode', title: '订单号', align: 'center', width: 230, sort: true}
-                , {field: 'deskCode', title: '桌号', align: 'center', width: 120}
-                , {field: 'member', title: '会员名', align: 'center', width: 120, templet: '#member_templet'}
-                , {field: 'totalPrice', title: '菜品总价', align: 'center', width: 140, sort: true,templet:'<div>{{d.totalPrice}}元</div>'}
-                , {field: 'actualPay', title: '实付金额', align: 'center', width: 140, templet: "#actualPay_templet"}
-                , {field: 'peopleNum', title: '人数', align: 'center', width: 120}
-                , {field: 'payStatus', title: '付款状态', align: 'center', width:120, templet: "#payStatus_templet"}
-                , {field: 'finishStatus', title: '上菜完成状态', align: 'center', width: 160, templet: "#finishStatus_templet"}
-                , {field: 'createTime', title: '创建时间', width: 170,sort: true,templet:'<div>{{d.createTime}}</div>'}
-                , {field: 'modifyTime', title: '修改时间', width: 170,sort: true,templet:'#modifyTime_templet'}
-                , {fixed: 'right', title: "工具栏",align:'center', width: 220, toolbar: '#barDemo'}
+                , {field: 'orderCode', title: 'Order number', align: 'center', width: 230, sort: true}
+                , {field: 'deskCode', title: 'table number', align: 'center', width: 120}
+                , {field: 'member', title: 'Member name', align: 'center', width: 120, templet: '#member_templet'}
+                , {field: 'totalPrice', title: 'Food total amount', align: 'center', width: 140, sort: true,templet:'<div>{{d.totalPrice}}元</div>'}
+                , {field: 'actualPay', title: 'Amount paid', align: 'center', width: 140, templet: "#actualPay_templet"}
+                , {field: 'peopleNum', title: 'Number of people', align: 'center', width: 120}
+                , {field: 'payStatus', title: 'Payment status', align: 'center', width:120, templet: "#payStatus_templet"}
+                , {field: 'finishStatus', title: 'service completion status', align: 'center', width: 160, templet: "#finishStatus_templet"}
+                , {field: 'createTime', title: 'Create time', width: 170,sort: true,templet:'<div>{{d.createTime}}</div>'}
+                , {field: 'modifyTime', title: 'Edit time', width: 170,sort: true,templet:'#modifyTime_templet'}
+                , {fixed: 'right', title: "Toolbar",align:'center', width: 220, toolbar: '#barDemo'}
             ]]
         });
         //监听头工具栏事件
@@ -217,9 +217,9 @@
             switch (obj.event) {
                 case 'delete':
                     if (data.length === 0) {
-                        layer.msg('请选择一行');
+                        layer.msg('PLease select a row');
                     } else {
-                        layer.confirm('确定删除?', function () {
+                        layer.confirm('Confirm delete?', function () {
                             var ids = '';
                             for (var i = 0; i < data.length; i++) {
                                 ids += data[i].orderId + ",";
@@ -232,10 +232,10 @@
                                 success: function (result) {
                                     if (result.code == 200) {
                                         table.reload('tableList'); //数据刷新
-                                        layer.msg('删除成功!', {icon: 1});
+                                        layer.msg('Sucessfully deleted!', {icon: 1});
                                     } else {
                                         layer.alert(result.msg, {
-                                            title: '提交结果'
+                                            title: 'Submit result'
                                             , anim: 6
                                         });
                                     }
@@ -256,19 +256,19 @@
                 var url = "/restaurant/order/viewdetail.html/" + data.orderId;
                 layer.open({
                     type: 2
-                    , title: '订单明细'
+                    , title: 'Order details'
                     , content: url
                     , maxmin: true
                     , anim: 1
                     , area: ['900px', '540px']
-                    ,btn: ['确定', '取消']
+                    ,btn: ['Confirm', 'Cancel']
                     ,yes: function(index, layero){
                         table.reload('tableList'); //数据刷新
                         layer.close(index);
                     }
                 });
             } else if (layEvent === 'del') {
-                layer.confirm('确定删除该订单?', function (index) {
+                layer.confirm('Confirm delete order?', function (index) {
                     $.ajax({
                         url: "/restaurant/order/del.do",
                         type: "post",
@@ -277,10 +277,10 @@
                         success: function (result) {
                             if (result.code == 200) {
                                 obj.del(); //删除对应行（tr）的DOM结构
-                                layer.msg('删除成功!', {icon: 1});
+                                layer.msg('Sucessfully deleted!', {icon: 1});
                             } else {
                                 layer.alert(result.msg, {
-                                    title: '提交结果'
+                                    title: 'Submit result'
                                     , anim: 6
                                 });
                             }
