--- a/restaurant/src/main/resources/templates/user/updatePwd.html
+++ b/restaurant/src/main/resources/templates/user/updatePwd.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>修改密码</title>
+    <title>Edit password</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="layui-card">
-        <div class="layui-card-header">修改密码</div>
+        <div class="layui-card-header">Edit password</div>
         <div class="layui-card-body">
             <form class="layui-form layui-form-pane" action="">
                 <div class="layui-input-inline layui-hide">
@@ -21,20 +21,20 @@
                            class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">当前密码</label>
+                    <label class="layui-form-label">Current password</label>
                     <div class="layui-input-inline">
                         <input type="password" name="oldPwd" lay-verType="tips"  lay-verify="required"  autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">新密码</label>
+                    <label class="layui-form-label">New password</label>
                     <div class="layui-input-inline">
                         <input type="password"id="newPassword" name="newPwd" lay-verType="tips" lay-verify="required|format_verify"  autocomplete="off" class="layui-input">
                     </div>
-                    <div class="layui-form-mid layui-word-aux">8-16位的数字和字母组成</div>
+                    <div class="layui-form-mid layui-word-aux">8-16 digits and letters</div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">确认密码</label>
+                    <label class="layui-form-label">Confirm password</label>
                     <div class="layui-input-inline">
                         <input type="password" id="rePassword" name="rePassword"  lay-verType="tips" lay-verify="required|new_re_same" autocomplete="off" class="layui-input">
                     </div>
@@ -43,7 +43,7 @@
                     <input type="button" class="layui-btn" lay-verType="tips" lay-submit lay-filter="updatePwd"
                            id="component-form-element"
                            value="确认修改">
-                    <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                    <button type="reset" class="layui-btn layui-btn-primary">Reset</button>
                 </div>
             </form>
         </div>
@@ -69,10 +69,10 @@
                 data: field,
                 success: function (result) {
                     if (result.code == 200) {
-                        layer.msg("修改密码成功!下次登录生效！", {icon: 6});
+                        layer.msg("The password is changed successfully! The next login will take effect！", {icon: 6});
                     } else {
                         layer.alert(result.msg, {
-                            title: '提交结果'
+                            title: 'Submit result'
                             , anim: 5
                         });
                     }
@@ -91,13 +91,13 @@
                var newPwd =  $('#newPassword').val();
                var rePwd = $('#rePassword').val();
                 if (newPwd!=rePwd) {
-                    return '两次输入的密码不相同!';
+                    return 'The password entered twice is not the same!';
                 }
             },
             //验证密码格式是否合格
             format_verify:function (value,item) {
                 if(!/^(?![0-9]+$)(?![a-zA-Z]+$)[0-9A-Za-z]{8,16}$/.test(value)){
-                    return "密码格式不正确！";
+                    return "Incorrect password format！";
                 }
             }
         });
